# pong-raytests

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: ball.c  ball.h  main.c  main.h  paddle.c  paddle.h
